# HDL-Parser-and-Chip-Testing-Framework

./: Makefile  README.md  pyproject.toml
src/: builtin_chips.py  chip_models.py  chip_simulator.py  hdl_parser.py  main.py  test_runner.py  test_vector_parser.py
tests/: test_builtin_chips.py  test_chip_simulator.py  test_ds.py  test_hdl_parser.py  test_incorrect_test_files.py  test_test_files.py  test_test_vector_parser.py
tests/incorrect_test_files/: And.hdl  DMux.tv
tests/test_files/: And.tv  AndOrSelect.hdl  AndOrSelect.tv  DMux.tv  Mux.hdl  Mux.tv  Not.tv  Or.hdl  Or.tv  Xor.hdl  Xor.tv
