[project]
name = "hdl-parser-and-chip-testing-framework"
version = "0.1.0"
description = "Nand2Tetris Final Project"
authors = [
    {name = "mate",email = "zhorzholianimate@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mypy (>=1.17.0,<2.0.0)",
    "ruff (>=0.12.4,<0.13.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "click (>=8.2.1,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
